ingress/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: argo-group
    alb.ingress.kubernetes.io/group.order: "1"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:221370546661:certificate/6f73fffc-dc0f-4c85-a295-147c64be7fcb
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 80
            path: /
            pathType: Prefix
